--- a/terms.html
+++ b/terms.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title data-translate="terms.title">الشروط والأحكام</title>
+    <title>الشروط والأحكام</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -50,24 +50,24 @@
             </button>
             <nav>
                 <ul>
-                    <li><a href="index.html" data-translate="nav.home">الرئيسية</a></li>
-                    <li><a href="index.html#miles" data-translate="nav.miles">الأميال</a></li>
-                    <li><a href="index.html#contact" data-translate="nav.contact">اتصل بنا</a></li>
+                    <li><a href="index.html">الرئيسية</a></li>
+                    <li><a href="index.html#miles">الأميال</a></li>
+                    <li><a href="index.html#contact">اتصل بنا</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle">
-                            <span data-translate="nav.support">الدعم</span> <i class="fas fa-chevron-down"></i>
+                            <span>الدعم</span> <i class="fas fa-chevron-down"></i>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="faq.html" data-translate="nav.faq">الأسئلة الشائعة</a></li>
-                            <li><a href="terms.html" data-translate="nav.terms">الشروط والأحكام</a></li>
-                            <li><a href="refund.html" data-translate="nav.refund">سياسة الاسترداد</a></li>
+                            <li><a href="faq.html">الأسئلة الشائعة</a></li>
+                            <li><a href="terms.html">الشروط والأحكام</a></li>
+                            <li><a href="refund.html">سياسة الاسترداد</a></li>
                         </ul>
                     </li>
                     <li class="theme-toggle">
                         <button id="theme-toggle-btn" aria-label="تبديل المظهر">
                             <i class="fas fa-moon"></i>
                             <i class="fas fa-sun"></i>
-                            <span data-translate="nav.darkMode">الوضع الداكن</span>
+                            <span>الوضع الداكن</span>
                         </button>
                     </li>
                     <li><div id="google_translate_element"></div></li>
@@ -80,8 +80,8 @@
 
     <section class="terms-hero">
         <div class="container">
-            <h1 class="page-title" data-translate="terms.title">الشروط والأحكام</h1>
-            <p class="page-subtitle" data-translate="terms.subtitle">يرجى قراءة الشروط والأحكام التالية بعناية قبل استخدام خدماتنا</p>
+            <h1 class="page-title">الشروط والأحكام</h1>
+            <p class="page-subtitle">يرجى قراءة الشروط والأحكام التالية بعناية قبل استخدام خدماتنا</p>
         </div>
     </section>
 
@@ -90,30 +90,30 @@
             <div class="terms-categories">
                 <button class="terms-category-btn active" data-category="all">
                     <i class="fas fa-list-ul"></i>
-                    <span data-translate="terms.categories.all">جميع الشروط</span>
+                    <span>جميع الشروط</span>
                 </button>
                 <button class="terms-category-btn" data-category="eligibility">
                     <i class="fas fa-user-check"></i>
-                    <span data-translate="terms.categories.eligibility">الأهلية</span>
+                    <span>الأهلية</span>
                 </button>
                 <button class="terms-category-btn" data-category="purchase">
                     <i class="fas fa-shopping-cart"></i>
-                    <span data-translate="terms.categories.purchase">الشراء</span>
+                    <span>الشراء</span>
                 </button>
                 <button class="terms-category-btn" data-category="payment">
                     <i class="fas fa-credit-card"></i>
-                    <span data-translate="terms.categories.payment">الدفع</span>
+                    <span>الدفع</span>
                 </button>
                 <button class="terms-category-btn" data-category="privacy">
                     <i class="fas fa-shield-alt"></i>
-                    <span data-translate="terms.categories.privacy">الخصوصية</span>
+                    <span>الخصوصية</span>
                 </button>
             </div>
 
             <div class="terms-search">
                 <div class="search-container">
                     <i class="fas fa-search search-icon"></i>
-                    <input type="text" id="terms-search-input" data-translate-placeholder="terms.searchPlaceholder" placeholder="ابحث في الشروط والأحكام...">
+                    <input type="text" id="terms-search-input" placeholder="ابحث في الشروط والأحكام...">
                     <button id="terms-search-clear" class="search-clear-btn">
                         <i class="fas fa-times"></i>
                     </button>
@@ -123,103 +123,103 @@
             <div class="terms-container">
                 <div class="terms-item" data-category="eligibility">
                     <div class="terms-question">
-                        <h3><i class="fas fa-check-circle"></i> <span data-translate="terms.sections.eligibility.title">شروط الأهلية</span></h3>
+                        <h3><i class="fas fa-check-circle"></i> <span>شروط الأهلية</span></h3>
                         <span class="terms-toggle"><i class="fas fa-chevron-down"></i></span>
                     </div>
                     <div class="terms-answer">
-                        <p data-translate="terms.sections.eligibility.condition1">يجب أن يكون لديك عضوية نشطة في برنامج الفرسان</p>
-                        <p data-translate="terms.sections.eligibility.condition2">يجب أن تكون العضوية مسجلة باسمك الشخصي</p>
-                        <p data-translate="terms.sections.eligibility.condition3">لا يمكن شراء الأميال للحسابات المجمدة أو المعلقة</p>
+                        <p>يجب أن يكون لديك عضوية نشطة في برنامج الفرسان</p>
+                        <p>يجب أن تكون العضوية مسجلة باسمك الشخصي</p>
+                        <p>لا يمكن شراء الأميال للحسابات المجمدة أو المعلقة</p>
                     </div>
                 </div>
 
                 <div class="terms-item" data-category="purchase">
                     <div class="terms-question">
-                        <h3><i class="fas fa-exchange-alt"></i> <span data-translate="terms.sections.purchase.nonRefundable">عدم قابلية الاسترداد</span></h3>
+                        <h3><i class="fas fa-exchange-alt"></i> <span>عدم قابلية الاسترداد</span></h3>
                         <span class="terms-toggle"><i class="fas fa-chevron-down"></i></span>
                     </div>
                     <div class="terms-answer">
-                        <p data-translate="terms.sections.purchase.nonRefundableText">الأميال المشتراة غير قابلة للاسترداد بعد إضافتها للحساب</p>
+                        <p>الأميال المشتراة غير قابلة للاسترداد بعد إضافتها للحساب</p>
                     </div>
                 </div>
 
                 <div class="terms-item" data-category="purchase">
                     <div class="terms-question">
-                        <h3><i class="fas fa-clock"></i> <span data-translate="terms.sections.purchase.validity">مدة الصلاحية</span></h3>
+                        <h3><i class="fas fa-clock"></i> <span>مدة الصلاحية</span></h3>
                         <span class="terms-toggle"><i class="fas fa-chevron-down"></i></span>
                     </div>
                     <div class="terms-answer">
-                        <p data-translate="terms.sections.purchase.validityText">صلاحية الأميال المشتراة 24 شهراً من تاريخ الإضافة</p>
+                        <p>صلاحية الأميال المشتراة 24 شهراً من تاريخ الإضافة</p>
                     </div>
                 </div>
 
                 <div class="terms-item" data-category="payment">
                     <div class="terms-question">
-                        <h3><i class="fas fa-credit-card"></i> <span data-translate="terms.sections.payment.title">طرق الدفع</span></h3>
+                        <h3><i class="fas fa-credit-card"></i> <span>طرق الدفع</span></h3>
                         <span class="terms-toggle"><i class="fas fa-chevron-down"></i></span>
                     </div>
                     <div class="terms-answer">
-                        <p data-translate="terms.sections.payment.methods">نقبل التحويل البنكي كطريقة للدفع</p>
+                        <p>نقبل التحويل البنكي كطريقة للدفع</p>
                     </div>
                 </div>
 
                 <div class="terms-item" data-category="payment">
                     <div class="terms-question">
-                        <h3><i class="fas fa-plane-departure"></i> <span data-translate="terms.sections.payment.delivery">وقت التسليم</span></h3>
+                        <h3><i class="fas fa-plane-departure"></i> <span>وقت التسليم</span></h3>
                         <span class="terms-toggle"><i class="fas fa-chevron-down"></i></span>
                     </div>
                     <div class="terms-answer">
-                        <p data-translate="terms.sections.payment.deliveryText">يتم إضافة الأميال خلال 10 ساعات إلى 48 ساعة من تأكيد الدفع</p>
+                        <p>يتم إضافة الأميال خلال 10 ساعات إلى 48 ساعة من تأكيد الدفع</p>
                     </div>
                 </div>
 
                 <div class="terms-item" data-category="payment">
                     <div class="terms-question">
-                        <h3><i class="fas fa-percentage"></i> <span data-translate="terms.sections.payment.taxes">الضرائب والرسوم</span></h3>
+                        <h3><i class="fas fa-percentage"></i> <span>الضرائب والرسوم</span></h3>
                         <span class="terms-toggle"><i class="fas fa-chevron-down"></i></span>
                     </div>
                     <div class="terms-answer">
-                        <p data-translate="terms.sections.payment.taxesText">لا توجد ضرائب إضافية على شراء الأميال</p>
+                        <p>لا توجد ضرائب إضافية على شراء الأميال</p>
                     </div>
                 </div>
 
                 <div class="terms-item" data-category="privacy">
                     <div class="terms-question">
-                        <h3><i class="fas fa-shield-alt"></i> <span data-translate="terms.sections.privacy.dataProtection">حماية البيانات</span></h3>
+                        <h3><i class="fas fa-shield-alt"></i> <span>حماية البيانات</span></h3>
                         <span class="terms-toggle"><i class="fas fa-chevron-down"></i></span>
                     </div>
                     <div class="terms-answer">
-                        <p data-translate="terms.sections.privacy.dataProtectionText">نحن نحمي بياناتك الشخصية ولا نشاركها مع أطراف ثالثة</p>
+                        <p>نحن نحمي بياناتك الشخصية ولا نشاركها مع أطراف ثالثة</p>
                     </div>
                 </div>
 
                 <div class="terms-item" data-category="privacy">
                     <div class="terms-question">
-                        <h3><i class="fas fa-cookie"></i> <span data-translate="terms.sections.privacy.cookies">ملفات تعريف الارتباط</span></h3>
+                        <h3><i class="fas fa-cookie"></i> <span>ملفات تعريف الارتباط</span></h3>
                         <span class="terms-toggle"><i class="fas fa-chevron-down"></i></span>
                     </div>
                     <div class="terms-answer">
-                        <p data-translate="terms.sections.privacy.cookiesText">نستخدم ملفات تعريف الارتباط لتحسين تجربة المستخدم</p>
+                        <p>نستخدم ملفات تعريف الارتباط لتحسين تجربة المستخدم</p>
                     </div>
                 </div>
 
                 <div class="terms-item" data-category="privacy">
                     <div class="terms-question">
-                        <h3><i class="fas fa-sync-alt"></i> <span data-translate="terms.sections.privacy.updates">تحديث الشروط</span></h3>
+                        <h3><i class="fas fa-sync-alt"></i> <span>تحديث الشروط</span></h3>
                         <span class="terms-toggle"><i class="fas fa-chevron-down"></i></span>
                     </div>
                     <div class="terms-answer">
-                        <p data-translate="terms.sections.privacy.updatesText">نحتفظ بالحق في تحديث هذه الشروط في أي وقت</p>
+                        <p>نحتفظ بالحق في تحديث هذه الشروط في أي وقت</p>
                     </div>
                 </div>
 
                 <div class="terms-item" data-category="privacy">
                     <div class="terms-question">
-                        <h3><i class="fas fa-exclamation-triangle"></i> <span data-translate="terms.sections.privacy.notifications">الإشعارات</span></h3>
+                        <h3><i class="fas fa-exclamation-triangle"></i> <span>الإشعارات</span></h3>
                         <span class="terms-toggle"><i class="fas fa-chevron-down"></i></span>
                     </div>
                     <div class="terms-answer">
-                        <p data-translate="terms.sections.privacy.notificationsText">سيتم إعلامك بالتغييرات الجوهرية في الشروط والأحكام</p>
+                        <p>سيتم إعلامك بالتغييرات الجوهرية في الشروط والأحكام</p>
                     </div>
                 </div>
             </div>
@@ -228,27 +228,27 @@
                 <div class="no-results-icon">
                     <i class="fas fa-search"></i>
                 </div>
-                <h3 data-translate="terms.noResults">لم يتم العثور على نتائج</h3>
-                <p data-translate="terms.tryAgain">حاول البحث بكلمات مختلفة أو تصفح جميع الشروط</p>
-                <button class="reset-search-btn" data-translate="terms.resetSearch">عرض جميع الشروط</button>
+                <h3>لم يتم العثور على نتائج</h3>
+                <p>حاول البحث بكلمات مختلفة أو تصفح جميع الشروط</p>
+                <button class="reset-search-btn">عرض جميع الشروط</button>
             </div>
 
             <div class="terms-agreement">
-                <p data-translate="terms.agreement.text">باستخدامك لموقعنا وخدماتنا، فإنك تقر بأنك قد قرأت وفهمت ووافقت على الالتزام بجميع الشروط والأحكام المذكورة أعلاه.</p>
-                <p data-translate="terms.agreement.lastUpdate">آخر تحديث: يناير 2024</p>
+                <p>باستخدامك لموقعنا وخدماتنا، فإنك تقر بأنك قد قرأت وفهمت ووافقت على الالتزام بجميع الشروط والأحكام المذكورة أعلاه.</p>
+                <p>آخر تحديث: يناير 2024</p>
             </div>
 
             <div class="terms-contact">
-                <h3 data-translate="terms.contact.title">هل لديك استفسارات حول الشروط والأحكام؟</h3>
-                <p data-translate="terms.contact.text">إذا كان لديك أي استفسارات حول هذه الشروط والأحكام، يرجى التواصل معنا عبر:</p>
+                <h3>هل لديك استفسارات حول الشروط والأحكام؟</h3>
+                <p>إذا كان لديك أي استفسارات حول هذه الشروط والأحكام، يرجى التواصل معنا عبر:</p>
                 <div class="terms-buttons">
                     <a href="https://wa.me/966566310983" target="_blank" class="whatsapp-btn">
                         <i class="fab fa-whatsapp"></i>
-                        <span data-translate="terms.contact.whatsapp">تواصل عبر واتساب</span>
+                        <span>تواصل عبر واتساب</span>
                     </a>
                     <a href="index.html#contact" class="contact-btn">
                         <i class="fas fa-envelope"></i>
-                        <span data-translate="terms.contact.contactForm">نموذج الاتصال</span>
+                        <span>نموذج الاتصال</span>
                     </a>
                 </div>
             </div>
