--- a/refund.html
+++ b/refund.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title data-translate="refund.title">سياسة الاسترداد</title>
+    <title>سياسة الاسترداد</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -50,24 +50,24 @@
             </button>
             <nav>
                 <ul>
-                    <li><a href="index.html" data-translate="nav.home">الرئيسية</a></li>
-                    <li><a href="index.html#miles" data-translate="nav.miles">الأميال</a></li>
-                    <li><a href="index.html#contact" data-translate="nav.contact">اتصل بنا</a></li>
+                    <li><a href="index.html">الرئيسية</a></li>
+                    <li><a href="index.html#miles">الأميال</a></li>
+                    <li><a href="index.html#contact">اتصل بنا</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle">
-                            <span data-translate="nav.support">الدعم</span> <i class="fas fa-chevron-down"></i>
+                            <span>الدعم</span> <i class="fas fa-chevron-down"></i>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="faq.html" data-translate="nav.faq">الأسئلة الشائعة</a></li>
-                            <li><a href="terms.html" data-translate="nav.terms">الشروط والأحكام</a></li>
-                            <li><a href="refund.html" data-translate="nav.refund">سياسة الاسترداد</a></li>
+                            <li><a href="faq.html">الأسئلة الشائعة</a></li>
+                            <li><a href="terms.html">الشروط والأحكام</a></li>
+                            <li><a href="refund.html">سياسة الاسترداد</a></li>
                         </ul>
                     </li>
                     <li class="theme-toggle">
                         <button id="theme-toggle-btn" aria-label="تبديل المظهر">
                             <i class="fas fa-moon"></i>
                             <i class="fas fa-sun"></i>
-                            <span data-translate="nav.darkMode">الوضع الداكن</span>
+                            <span>الوضع الداكن</span>
                         </button>
                     </li>
                     <li><div id="google_translate_element"></div></li>
@@ -80,8 +80,8 @@
 
     <section class="refund-hero">
         <div class="container">
-            <h1 class="page-title" data-translate="refund.title">سياسة الاسترداد</h1>
-            <p class="page-subtitle" data-translate="refund.subtitle">تعرف على سياسة الاسترداد الخاصة بنا لضمان حقوقك</p>
+            <h1 class="page-title">سياسة الاسترداد</h1>
+            <p class="page-subtitle">تعرف على سياسة الاسترداد الخاصة بنا</p>
         </div>
     </section>
 
@@ -90,26 +90,26 @@
             <div class="refund-categories">
                 <button class="refund-category-btn active" data-category="all">
                     <i class="fas fa-list-ul"></i>
-                    <span data-translate="refund.categories.all">جميع الحالات</span>
+                    <span>جميع الحالات</span>
                 </button>
                 <button class="refund-category-btn" data-category="policy">
                     <i class="fas fa-file-alt"></i>
-                    <span data-translate="refund.categories.policy">سياسة الاسترداد</span>
+                    <span>سياسة الاسترداد</span>
                 </button>
                 <button class="refund-category-btn" data-category="other">
                     <i class="fas fa-exclamation-circle"></i>
-                    <span data-translate="refund.categories.other">حالات أخرى</span>
+                    <span>حالات أخرى</span>
                 </button>
                 <button class="refund-category-btn" data-category="note">
                     <i class="fas fa-info-circle"></i>
-                    <span data-translate="refund.categories.note">ملاحظات هامة</span>
+                    <span>ملاحظات هامة</span>
                 </button>
             </div>
 
             <div class="refund-search">
                 <div class="search-container">
                     <i class="fas fa-search search-icon"></i>
-                    <input type="text" id="refund-search-input" data-translate-placeholder="refund.searchPlaceholder" placeholder="ابحث في سياسة الاسترداد...">
+                    <input type="text" id="refund-search-input" placeholder="ابحث في سياسة الاسترداد...">
                     <button id="refund-search-clear" class="search-clear-btn">
                         <i class="fas fa-times"></i>
                     </button>
@@ -119,51 +119,51 @@
             <div class="refund-container">
                 <div class="refund-item" data-category="policy">
                     <div class="refund-question">
-                        <h3><i class="fas fa-undo-alt"></i> <span data-translate="refund.sections.policy.cases">حالات الاسترداد</span></h3>
+                        <h3><i class="fas fa-undo-alt"></i> <span>حالات الاسترداد</span></h3>
                         <span class="refund-toggle"><i class="fas fa-chevron-down"></i></span>
                     </div>
                     <div class="refund-answer">
-                        <p data-translate="refund.sections.policy.casesText">في حال عدم وصول الاميال خلال 3 ايام سيتم ارجاع المبلغ المدفوع.</p>
+                        <p>في حال عدم وصول الاميال خلال 3 ايام سيتم ارجاع المبلغ المدفوع.</p>
                     </div>
                 </div>
 
                 <div class="refund-item" data-category="policy">
                     <div class="refund-question">
-                        <h3><i class="fas fa-procedures"></i> <span data-translate="refund.sections.policy.procedures">إجراءات الاسترداد</span></h3>
+                        <h3><i class="fas fa-procedures"></i> <span>إجراءات الاسترداد</span></h3>
                         <span class="refund-toggle"><i class="fas fa-chevron-down"></i></span>
                     </div>
                     <div class="refund-answer">
-                        <p data-translate="refund.sections.policy.proceduresText">في حالة عدم استلام الأميال خلال المدة المحددة (3 أيام)، يرجى التواصل معنا عبر واتساب.</p>
+                        <p>في حالة عدم استلام الأميال خلال المدة المحددة (3 أيام)، يرجى التواصل معنا عبر واتساب.</p>
                     </div>
                 </div>
 
                 <div class="refund-item" data-category="policy">
                     <div class="refund-question">
-                        <h3><i class="fas fa-money-bill-wave"></i> <span data-translate="refund.sections.policy.method">طريقة الاسترداد</span></h3>
+                        <h3><i class="fas fa-money-bill-wave"></i> <span>طريقة الاسترداد</span></h3>
                         <span class="refund-toggle"><i class="fas fa-chevron-down"></i></span>
                     </div>
                     <div class="refund-answer">
-                        <p data-translate="refund.sections.policy.methodText">سيتم إرجاع المبلغ بنفس طريقة الدفع الأصلية التي تم استخدامها عند الشراء. قد تستغرق عملية الاسترداد من 3 إلى 7 أيام عمل حسب البنك أو طريقة الدفع المستخدمة.</p>
+                        <p>سيتم إرجاع المبلغ بنفس طريقة الدفع الأصلية التي تم استخدامها عند الشراء. قد تستغرق عملية الاسترداد من 3 إلى 7 أيام عمل حسب البنك أو طريقة الدفع المستخدمة.</p>
                     </div>
                 </div>
 
                 <div class="refund-item" data-category="other">
                     <div class="refund-question">
-                        <h3><i class="fas fa-exclamation-circle"></i> <span data-translate="refund.sections.otherCases.afterArrival">بعد وصول الأميال</span></h3>
+                        <h3><i class="fas fa-exclamation-circle"></i> <span>بعد وصول الأميال</span></h3>
                         <span class="refund-toggle"><i class="fas fa-chevron-down"></i></span>
                     </div>
                     <div class="refund-answer">
-                        <p data-translate="refund.sections.otherCases.afterArrivalText">بعد وصول الاميال على العضويه لا يوجد لدينا عمليات استرداد المال.</p>
+                        <p>بعد وصول الاميال على العضويه لا يوجد لدينا عمليات استرداد المال.</p>
                     </div>
                 </div>
 
                 <div class="refund-item" data-category="note">
                     <div class="refund-question">
-                        <h3><i class="fas fa-info-circle"></i> <span data-translate="refund.sections.otherCases.note">ملاحظة هامة</span></h3>
+                        <h3><i class="fas fa-info-circle"></i> <span>ملاحظة هامة</span></h3>
                         <span class="refund-toggle"><i class="fas fa-chevron-down"></i></span>
                     </div>
                     <div class="refund-answer">
-                        <p data-translate="refund.sections.otherCases.noteText">يرجى التأكد من صحة بيانات حساب الفرسان الخاص بك قبل إتمام عملية الشراء، حيث أن الأخطاء في المعلومات قد تؤدي إلى تأخير في إضافة الأميال.</p>
+                        <p>يرجى التأكد من صحة بيانات حساب الفرسان الخاص بك قبل إتمام عملية الشراء، حيث أن الأخطاء في المعلومات قد تؤدي إلى تأخير في إضافة الأميال.</p>
                     </div>
                 </div>
             </div>
@@ -172,20 +172,20 @@
                 <div class="no-results-icon">
                     <i class="fas fa-search"></i>
                 </div>
-                <h3 data-translate="refund.noResults">لم يتم العثور على نتائج</h3>
-                <p data-translate="refund.tryAgain">حاول البحث بكلمات مختلفة أو تصفح جميع الحالات</p>
-                <button class="reset-search-btn" data-translate="refund.resetSearch">عرض جميع الحالات</button>
+                <h3>لم يتم العثور على نتائج</h3>
+                <p>حاول البحث بكلمات مختلفة أو تصفح جميع الحالات</p>
+                <button class="reset-search-btn">عرض جميع الحالات</button>
             </div>
 
             <div class="refund-contact">
-                <h3 data-translate="refund.contact.title">هل لديك استفسارات حول سياسة الاسترداد؟</h3>
-                <p data-translate="refund.contact.text">يمكنك التواصل معنا مباشرة عبر واتساب أو من خلال نموذج الاتصال</p>
+                <h3>هل لديك استفسارات حول سياسة الاسترداد؟</h3>
+                <p>يمكنك التواصل معنا مباشرة عبر واتساب أو من خلال نموذج الاتصال</p>
                 <div class="refund-buttons">
                     <a href="https://wa.me/966566310983" target="_blank" class="whatsapp-btn">
-                        <i class="fab fa-whatsapp"></i> <span data-translate="chat.whatsappBtn">تواصل عبر واتساب</span>
+                        <i class="fab fa-whatsapp"></i> <span>تواصل عبر واتساب</span>
                     </a>
                     <a href="index.html#contact" class="contact-btn">
-                        <i class="fas fa-envelope"></i> <span data-translate="contact.title">نموذج الاتصال</span>
+                        <i class="fas fa-envelope"></i> <span>نموذج الاتصال</span>
                     </a>
                 </div>
             </div>
@@ -231,20 +231,20 @@
         </div>
         <div class="chat-container">
             <div class="chat-header">
-                <h3 data-translate="chat.title">المحادثة المباشرة</h3>
+                <h3>المحادثة المباشرة</h3>
                 <span class="chat-close">&times;</span>
             </div>
             <div class="chat-messages">
                 <div class="message system">
-                    <p data-translate="chat.welcome">مرحباً بك في سوق الأميال السعودي! كيف يمكننا مساعدتك اليوم؟</p>
-                    <span class="time" data-translate="chat.now">الآن</span>
+                    <p>مرحباً بك في سوق الأميال السعودي! كيف يمكننا مساعدتك اليوم؟</p>
+                    <span class="time">الآن</span>
                     <a href="https://wa.me/966566310983" target="_blank" class="whatsapp-chat-btn">
-                        <i class="fab fa-whatsapp"></i> <span data-translate="chat.whatsappBtn">التواصل المباشر عبر واتساب</span>
+                        <i class="fab fa-whatsapp"></i> <span>التواصل المباشر عبر واتساب</span>
                     </a>
                 </div>
             </div>
             <div class="chat-input">
-                <input type="text" data-translate-placeholder="chat.inputPlaceholder" placeholder="اكتب رسالتك هنا..." id="chat-message-input">
+                <input type="text" placeholder="اكتب رسالتك هنا..." id="chat-message-input">
                 <button id="chat-send-btn">
                     <i class="fas fa-paper-plane"></i>
                 </button>
