--- a/faq.html
+++ b/faq.html
@@ -3,7 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>الأسئلة الشائعة</title>
+    <title>الأسئلة الشائعة - سوق الأميال السعودي</title>
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="الأسئلة الشائعة - سوق الأميال السعودي">
+    <meta name="description" content="إجابات لأكثر الأسئلة شيوعاً حول خدمات سوق الأميال السعودي. معلومات عن شراء الأميال، الاستخدام، والدفع.">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://saudi-mile-market.com/faq.html">
+    <meta property="og:title" content="الأسئلة الشائعة - سوق الأميال السعودي">
+    <meta property="og:description" content="إجابات لأكثر الأسئلة شيوعاً حول خدمات سوق الأميال السعودي. معلومات عن شراء الأميال، الاستخدام، والدفع.">
+    <meta property="og:image" content="images/link/lg.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://saudi-mile-market.com/faq.html">
+    <meta property="twitter:title" content="الأسئلة الشائعة - سوق الأميال السعودي">
+    <meta property="twitter:description" content="إجابات لأكثر الأسئلة شيوعاً حول خدمات سوق الأميال السعودي. معلومات عن شراء الأميال، الاستخدام، والدفع.">
+    <meta property="twitter:image" content="images/link/lg.png">
+
+    <link rel="icon" type="image/png" href="images/link/lg.png">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700&display=swap" rel="stylesheet">
