--- a/index.html
+++ b/index.html
@@ -4,6 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>سوق الأميال السعودي - الأميال</title>
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="سوق الأميال السعودي - الأميال">
+    <meta name="description" content="وجهتك الأولى لشراء أميال الخطوط السعودية. اشترِ الأميال لاستبدالها برحلات، ترقيات، والمزيد.">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://saudi-mile-market.com/">
+    <meta property="og:title" content="سوق الأميال السعودي - الأميال">
+    <meta property="og:description" content="وجهتك الأولى لشراء أميال الخطوط السعودية. اشترِ الأميال لاستبدالها برحلات، ترقيات، والمزيد.">
+    <meta property="og:image" content="images/link/lg.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://saudi-mile-market.com/">
+    <meta property="twitter:title" content="سوق الأميال السعودي - الأميال">
+    <meta property="twitter:description" content="وجهتك الأولى لشراء أميال الخطوط السعودية. اشترِ الأميال لاستبدالها برحلات، ترقيات، والمزيد.">
+    <meta property="twitter:image" content="images/link/lg.png">
+
+    <link rel="icon" type="image/png" href="images/link/lg.png">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700&display=swap" rel="stylesheet">
