--- a/faq.html
+++ b/faq.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="animations.css">
     <script type="text/javascript">
         function googleTranslateElementInit() {
             new google.translate.TranslateElement({
@@ -230,7 +231,7 @@
                 <button class="reset-search-btn">عرض جميع الأسئلة</button>
             </div>
 
-            <div class="faq-contact">
+            <div class="terms-contact">
                 <h3>لم تجد إجابة لسؤالك؟</h3>
                 <p>يمكنك التواصل معنا مباشرة عبر واتساب أو من خلال نموذج الاتصال</p>
                 <div class="faq-buttons">
@@ -278,33 +279,7 @@
         </div>
     </div>
 
-    <div class="chat-widget">
-        <div class="chat-toggle">
-            <i class="fas fa-comments"></i>
-        </div>
-        <div class="chat-container">
-            <div class="chat-header">
-                <h3>المحادثة المباشرة</h3>
-                <span class="chat-close">&times;</span>
-            </div>
-            <div class="chat-messages">
-                <div class="message system">
-                    <p>مرحباً بك في سوق الأميال السعودي! كيف يمكننا مساعدتك اليوم؟</p>
-                    <span class="time">الآن</span>
-                    <a href="https://wa.me/966566310983" target="_blank" class="whatsapp-chat-btn">
-                        <i class="fab fa-whatsapp"></i> <span>التواصل المباشر عبر واتساب</span>
-                    </a>
-                </div>
-            </div>
-            <div class="chat-input">
-                <input type="text" placeholder="اكتب رسالتك هنا..." id="chat-message-input">
-                <button id="chat-send-btn">
-                    <i class="fas fa-paper-plane"></i>
-                </button>
-            </div>
-        </div>
-    </div>
-
     <script src="script.js"></script>
+    <script src="enhancements.js"></script>
 </body>
 </html> 
