--- a/faq.html
+++ b/faq.html
@@ -231,7 +231,7 @@
                 <button class="reset-search-btn">عرض جميع الأسئلة</button>
             </div>
 
-            <div class="terms-contact">
+            <div class="faq-contact">
                 <h3>لم تجد إجابة لسؤالك؟</h3>
                 <p>يمكنك التواصل معنا مباشرة عبر واتساب أو من خلال نموذج الاتصال</p>
                 <div class="faq-buttons">
