--- a/terms.html
+++ b/terms.html
@@ -7,20 +7,23 @@
     <!-- Primary Meta Tags -->
     <meta name="title" content="الشروط والأحكام - سوق الأميال السعودي">
     <meta name="description" content="تعرف على الشروط والأحكام الخاصة بخدمات سوق الأميال السعودي. شروط الأهلية، سياسة الشراء، وحماية البيانات.">
+    <meta name="image" content="images/link/lg.png">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://saudi-mile-market.com/terms.html">
     <meta property="og:title" content="الشروط والأحكام - سوق الأميال السعودي">
     <meta property="og:description" content="تعرف على الشروط والأحكام الخاصة بخدمات سوق الأميال السعودي. شروط الأهلية، سياسة الشراء، وحماية البيانات.">
-    <meta property="og:image" content="images/link/lg.png">
+    <meta property="og:image" content="https://saudi-mile-market.com/images/link/lg.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://saudi-mile-market.com/terms.html">
     <meta property="twitter:title" content="الشروط والأحكام - سوق الأميال السعودي">
     <meta property="twitter:description" content="تعرف على الشروط والأحكام الخاصة بخدمات سوق الأميال السعودي. شروط الأهلية، سياسة الشراء، وحماية البيانات.">
-    <meta property="twitter:image" content="images/link/lg.png">
+    <meta property="twitter:image" content="https://saudi-mile-market.com/images/link/lg.png">
 
     <link rel="icon" type="image/png" href="images/link/lg.png">
     <link rel="stylesheet" href="styles.css">
