--- a/index.html
+++ b/index.html
@@ -7,20 +7,23 @@
     <!-- Primary Meta Tags -->
     <meta name="title" content="سوق الأميال السعودي - الأميال">
     <meta name="description" content="وجهتك الأولى لشراء أميال الخطوط السعودية. اشترِ الأميال لاستبدالها برحلات، ترقيات، والمزيد.">
+    <meta name="image" content="images/link/lg.png">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://saudi-mile-market.com/">
     <meta property="og:title" content="سوق الأميال السعودي - الأميال">
     <meta property="og:description" content="وجهتك الأولى لشراء أميال الخطوط السعودية. اشترِ الأميال لاستبدالها برحلات، ترقيات، والمزيد.">
-    <meta property="og:image" content="images/link/lg.png">
+    <meta property="og:image" content="https://saudi-mile-market.com/images/link/lg.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://saudi-mile-market.com/">
     <meta property="twitter:title" content="سوق الأميال السعودي - الأميال">
     <meta property="twitter:description" content="وجهتك الأولى لشراء أميال الخطوط السعودية. اشترِ الأميال لاستبدالها برحلات، ترقيات، والمزيد.">
-    <meta property="twitter:image" content="images/link/lg.png">
+    <meta property="twitter:image" content="https://saudi-mile-market.com/images/link/lg.png">
 
     <link rel="icon" type="image/png" href="images/link/lg.png">
     <link rel="stylesheet" href="styles.css">
