--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             new google.translate.TranslateElement({
                 pageLanguage: 'ar',
                 includedLanguages: 'en,ar,de,fr',
-                layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+                layout: google.translate.TranslateElement.InlineLayout.HORIZONTAL,
                 autoDisplay: false,
                 multilanguagePage: true,
                 gaTrack: true,
