--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         function googleTranslateElementInit() {
             new google.translate.TranslateElement({
                 pageLanguage: 'ar',
-                includedLanguages: 'en,ar,de,fr',
+                includedLanguages: 'en,ar,de,fr,es',
                 layout: google.translate.TranslateElement.InlineLayout.HORIZONTAL,
                 autoDisplay: false,
                 multilanguagePage: true,
