--- a/index.html
+++ b/index.html
@@ -52,12 +52,15 @@
     <link rel="canonical" href="https://www.saudi-mile-market.com/">
     
     <!-- Favicon and App Icons -->
+     <!--
     <link rel="icon" type="image/png" sizes="32x32" href="images/link/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/link/favicon-16x16.png">
     <link rel="apple-touch-icon" sizes="180x180" href="images/link/apple-touch-icon.png">
     <link rel="mask-icon" href="images/link/safari-pinned-tab.svg" color="#1e88e5">
     <meta name="msapplication-TileImage" content="images/link/mstile-144x144.png">
     <meta name="msapplication-TileColor" content="#1e88e5">
+-->
+    <link rel="icon" type="image/png" href="images/link/lg.png">
 
     <!-- Existing stylesheets and scripts -->
     <link rel="stylesheet" href="styles.css">
