--- a/index.html
+++ b/index.html
@@ -483,7 +483,29 @@
         </div>
     </div>
 
+    <!-- Chat Interface -->
+    <div class="chat-toggle">
+        <i class="fas fa-comments"></i>
+    </div>
+    
+    <div class="chat-container">
+        <div class="chat-header">
+            <h3>المساعد الذكي</h3>
+            <button class="chat-close">
+                <i class="fas fa-times"></i>
+            </button>
+        </div>
+        <div class="chat-messages"></div>
+        <div class="chat-input-container">
+            <input type="text" class="chat-input" placeholder="اكتب رسالتك هنا..." aria-label="رسالتك">
+            <button class="chat-send" aria-label="إرسال">
+                <i class="fas fa-paper-plane"></i>
+            </button>
+        </div>
+    </div>
+
     <script src="script.js"></script>
     <script src="enhancements.js"></script>
+    <script src="chat.js"></script>
 </body>
 </html> 
