--- a/index.html
+++ b/index.html
@@ -367,6 +367,28 @@
         </div>
     </section>
 
+    <div class="flight-radar-widget" id="flight-radar">
+        <div class="radar-toggle">
+            <i class="fas fa-plane"></i>
+            <span>تتبع الرحلات</span>
+        </div>
+        <div class="radar-content">
+            <div class="radar-header">
+                <h3>تتبع الرحلات مباشرة</h3>
+                <button class="radar-close">
+                    <i class="fas fa-times"></i>
+                </button>
+            </div>
+            <div class="map-container">
+                <iframe src="https://www.flightradar24.com/simple?lat=24.0&lon=45.0&z=5" 
+                    width="100%" 
+                    height="600" 
+                    frameborder="0">
+                </iframe>
+            </div>
+        </div>
+    </div>
+
     <section class="contact" id="contact">
         <div class="container">
             <h2 class="section-title">اتصل بنا</h2>
