--- a/support/faq.html
+++ b/support/faq.html
@@ -23,10 +23,10 @@
     <meta property="twitter:image" content="images/link/lg.png">
 
     <link rel="icon" type="image/png" href="images/link/lg.png">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="animations.css">
+    <link rel="stylesheet" href="../styles/animations.css">
     <script type="text/javascript">
         function googleTranslateElementInit() {
             new google.translate.TranslateElement({
@@ -46,7 +46,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <a href="index.html">
+                <a href="../../index.html">
                 <svg width="150" height="50" viewBox="0 0 150 50" xmlns="http://www.w3.org/2000/svg" class="airline-logo">
                     <defs>
                         <linearGradient id="logoGradient" x1="0%" y1="0%" x2="100%" y2="100%">
@@ -72,9 +72,9 @@
             </button>
             <nav>
                 <ul>
-                    <li><a href="index.html">الرئيسية</a></li>
-                    <li><a href="index.html#miles">الأميال</a></li>
-                    <li><a href="index.html#contact">اتصل بنا</a></li>
+                    <li><a href="../../index.html">الرئيسية</a></li>
+                    <li><a href="../../index.html#miles">الأميال</a></li>
+                    <li><a href="../../index.html#contact">اتصل بنا</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle">
                             <span>الدعم</span> <i class="fas fa-chevron-down"></i>
@@ -241,7 +241,7 @@
                         <i class="fab fa-whatsapp"></i>
                         <span>تواصل عبر واتساب</span>
                     </a>
-                    <a href="index.html#contact" class="contact-btn">
+                    <a href="../../index.html#contact" class="contact-btn">
                         <i class="fas fa-envelope"></i>
                         <span>نموذج الاتصال</span>
                     </a>
@@ -281,7 +281,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
-    <script src="enhancements.js"></script>
+    <script src="../scripts/script.js"></script>
+    <script src="../scripts/enhancements.js"></script>
 </body>
 </html> 
