--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
     <link rel="icon" type="image/png" href="images/link/lg.png">
 
     <!-- Existing stylesheets and scripts -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="animations.css">
+    <link rel="stylesheet" href="styles/animations.css">
     <script type="text/javascript">
         function googleTranslateElementInit() {
             new google.translate.TranslateElement({
@@ -130,9 +130,9 @@
                             <span>الدعم</span> <i class="fas fa-chevron-down"></i>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="faq.html">الأسئلة الشائعة</a></li>
-                            <li><a href="terms.html">الشروط والأحكام</a></li>
-                            <li><a href="refund.html">سياسة الاسترداد</a></li>
+                            <li><a href="support/faq.html">الأسئلة الشائعة</a></li>
+                            <li><a href="support/terms.html">الشروط والأحكام</a></li>
+                            <li><a href="support/refund.html">سياسة الاسترداد</a></li>
                         </ul>
                     </li>
                     <li class="theme-toggle">
@@ -507,8 +507,8 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
-    <script src="enhancements.js"></script>
-    <script src="chat.js"></script>
+    <script src="scripts/script.js"></script>
+    <script src="scripts/enhancements.js"></script>
+    <script src="scripts/chat.js"></script>
 </body>
 </html> 
